hphp/test/zend/good/Zend/tests/bug65784.php.expectf
string(9) "not catch"
NULL

Fatal error: Failure to resolve undefined class NotExists in %s/bug65784.php on line 35
